--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node src/multi-source-server.js",
+    "start:simple": "node src/production-server.js",
+    "start:ts": "node dist/index.js",
+    "start:dev": "tsx watch src/index.ts",
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "typecheck": "tsc --noEmit",
@@ -15,7 +18,9 @@
     "ingest:grants": "tsx src/services/sources/grants-gov/index.ts",
     "ingest:fpds": "tsx src/services/sources/fpds/index.ts",
     "worker": "tsx src/workers/index.ts",
-    "scheduler": "tsx src/scheduler/index.ts"
+    "scheduler": "tsx src/scheduler/index.ts",
+    "build:frontend": "cd frontend && npm run build",
+    "build:all": "npm run build:frontend"
   },
   "keywords": [
     "procurement",
@@ -33,6 +38,7 @@
     "@aws-sdk/client-s3": "^3.862.0",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@types/adm-zip": "^0.5.7",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/ioredis": "^4.28.10",
     "@types/node": "^24.2.0",
@@ -41,6 +47,7 @@
     "axios": "^1.11.0",
     "bull": "^4.16.5",
     "cheerio": "^1.1.2",
+    "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
