Complete enterprise-grade UI redesign with tribble.ai design system
- Implemented tribble.ai design system (blue/white professional theme)
- Created professional homepage with hero, metrics, features sections
- Enhanced Search page with advanced filters, real-time search, saved searches
- Redesigned Opportunity Detail with tabs, document management, analytics
- Updated Dashboard with real-time data, charts, trending opportunities
- Enhanced API with 10+ new endpoints for analytics and intelligence
- Added competition analysis, award probability, and market trends
- Implemented document preview with file type icons
- Added saved searches and search history functionality
- Complete responsive design for all screen sizes
- Professional enterprise-grade UX throughout

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.536.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^10.2.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
