--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.536.0",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^13.0.1",
     "postcss-preset-env": "^10.2.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
